@@ -16,21 +16,38 @@
  */
 package org.apache.solr.common.cloud;
 
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.Reader;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Properties;
 
+import org.apache.solr.common.SolrException;
 import org.apache.solr.common.StringUtils;
 
 public class VMParamsSingleSetCredentialsDigestZkCredentialsProvider extends DefaultZkCredentialsProvider {
-  
+
+  public static final String DEFAULT_DIGEST_FILE_VM_PARAM_NAME = "zkDigestCredentialsFile";
   public static final String DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME = "zkDigestUsername";
   public static final String DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME = "zkDigestPassword";
+
+  static Properties readCredentialsFile(String pathToFile) throws SolrException {
+    Properties props = new Properties();
+    try (Reader reader = new InputStreamReader(new FileInputStream(pathToFile), StandardCharsets.UTF_8)) {
+      props.load(reader);
+    } catch (IOException ioExc) {
+      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, ioExc);
+    }
+    return props;
+  }
   
   final String zkDigestUsernameVMParamName;
   final String zkDigestPasswordVMParamName;
-  
+
   public VMParamsSingleSetCredentialsDigestZkCredentialsProvider() {
     this(DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME, DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME);
   }
@@ -42,9 +59,13 @@ public class VMParamsSingleSetCredentialsDigestZkCredentialsProvider extends Def
 
   @Override
   protected Collection<ZkCredentials> createCredentials() {
-    List<ZkCredentials> result = new ArrayList<ZkCredentials>();
-    String digestUsername = System.getProperty(zkDigestUsernameVMParamName);
-    String digestPassword = System.getProperty(zkDigestPasswordVMParamName);
+    List<ZkCredentials> result = new ArrayList<>();
+
+    String pathToFile = System.getProperty(DEFAULT_DIGEST_FILE_VM_PARAM_NAME);
+    Properties props = (pathToFile != null) ? readCredentialsFile(pathToFile) : System.getProperties();
+
+    String digestUsername = props.getProperty(zkDigestUsernameVMParamName);
+    String digestPassword = props.getProperty(zkDigestPasswordVMParamName);
     if (!StringUtils.isEmpty(digestUsername) && !StringUtils.isEmpty(digestPassword)) {
       result.add(new ZkCredentials("digest",
           (digestUsername + ":" + digestPassword).getBytes(StandardCharsets.UTF_8)));
